# DendrETH

./: .dockerignore  .editorconfig  .env.example  .envrc  .gitattributes  .gitignore  .gitmodules  .prettierignore  .prettierrc  .yarnrc.yml  Dockerfile  Dockerfile.relay  LICENSE  Makefile  README.md  TODO  dependabot.yml  docker-compose.yaml  dump.rdb  example.tf  flake.nix  jest.config.ts  nix.sh  overlay.nix  package-lock.json  package.json  process-compose.yaml  python-packages.nix  shell.nix  supervisord.conf  tsconfig.base.json  tsconfig.json  yarn-project.nix  zk_primitives_and_performance.md
beacon-light-client/circom/rust-verifier/: Cargo.toml
beacon-light-client/circom/rust-verifier/src/: instruction.rs  main.rs
beacon-light-client/plonky2/circuits/: Cargo.toml  ISSUES.md  Implementation_note.md  README.md  is_valid_merkle_branch_input.json
beacon-light-client/plonky2/circuits/examples/: is_valid_merkle_branch.rs  merkle_tree.rs
beacon-light-client/plonky2/circuits/src/: biguint.rs  bit_operations.rs  bls12_381_circuit.rs  build_balance_accumulator_inner_level.rs  build_balance_inner_level_circuit.rs  build_commitment_mapper_first_level_circuit.rs  build_commitment_mapper_inner_level_circuit.rs  build_final_circuit.rs  build_first_level_circuit.rs  build_inner_level_circuit.rs  build_stark_proof_verifier.rs  build_validator_balance_accumulator_circuit.rs  build_validator_balance_circuit.rs  circuit_input_common.rs  deposit_hash_tree_root.rs  deposit_hash_tree_root_poseidon.rs  deposit_tree_commitment_mapper.rs  deposits_accumulator_leaf_circuit.rs  generator_serializer.rs  hash_tree_root.rs  hash_tree_root_poseidon.rs  is_active_validator.rs  is_valid_merkle_branch.rs  is_valid_merkle_branch_poseidon.rs  lib.rs  main.rs  serializers.rs  sha256.rs  targets_serialization.rs  types.rs  utils.rs  validator_accumulator_commitment_mapper.rs  validator_balance_circuit.rs  validator_balance_circuit_accumulator.rs  validator_balance_verification.rs  validator_commitment.rs  validator_commitment_mapper.rs  validator_hash_tree_root.rs  validator_hash_tree_root_poseidon.rs
beacon-light-client/plonky2/circuits_executables/: .gitignore  Cargo.toml  TODO  azure_sdk_for_rust_stream_test.txt  run.sh  run_everywhere.sh  run_final_layer.sh  validator_proof.json  validator_proof.zip1  validator_proof_base64.json
beacon-light-client/plonky2/circuits_executables/examples/: balance_verification_example.rs  read_circuit_data_example.rs  test_application.rs  test_application_azure.rs  view_proof.rs
beacon-light-client/plonky2/commitment_mapper_builder/: Cargo.toml
beacon-light-client/plonky2/is_valid_merkle_branch/: Cargo.toml  input.json
beacon-light-client/plonky2/poseidon_validator_tree/: Cargo.toml
beacon-light-client/plonky2/second_level_proof/: Cargo.toml
casper-finality-proofs/: Cargo.toml  output.json  test.json
casper-finality-proofs/benches/: g1_ecp_aggregation_benchmark.rs  g1_ecp_aggregation_starky_benchmark.rs
casper-finality-proofs/fuzz/: .gitignore  Cargo.toml  README.md
casper-finality-proofs/fuzz/.cargo/: config.toml
casper-finality-proofs/fuzz/fuzz_targets/: compute_shuffled_index_mainnet.rs  compute_shuffled_index_minimal.rs  fuzz_target_1.rs  test.rs  test2.rs  weigh_justification_and_finalization.rs
casper-finality-proofs/fuzz/scripts/: fuzz.sh
casper-finality-proofs/fuzz/seed/: compute_shuffled_index.sh
casper-finality-proofs/js_helpers/: test.ts  tsconfig.json  weigh_justification_and_finalization.ts
casper-finality-proofs/scripts/: diff_tester.sh
casper-finality-proofs/scripts/differential_setup/: lte.json  test.json
casper-finality-proofs/scripts/reference/: ref_lte.py  ref_test.py
casper-finality-proofs/src/: beacon_state_field_verification.rs  checkpoint.rs  commitment_mapper_first_level.rs  commitment_mapper_inner_level.rs  commitment_mapper_variable.rs  compute_shuffled_index.rs  compute_shuffled_index_helpers.rs  constants.rs  epoch_processing.rs  get_total_active_balance_first_level.rs  get_total_active_balance_inner_level.rs  hash_test.rs  justification_bits.rs  lib.rs  main.rs  proof_utils.rs  test.json  test.rs  test_lte.rs  types.rs  validator.rs  verify_subcommittee_votes.rs  weigh_justification_and_finalization.rs
casper-finality-proofs/src/combine_finality_votes/: circuit.rs  circuit2.rs  commitment_accumulator_inner.rs  concat_bitmasks.rs  count_unique_pubkeys.rs  count_unique_validators.rs  mod.rs  unique_validators_accumulator.rs  verify_subcommittee_vote.rs
casper-finality-proofs/src/compute_shuffled_index/: build_all_circuits.rs  circuit.rs  compute_shuffled_index.rs  compute_shuffled_index_helpers.rs  helpers.rs  mod.rs  tree.rs
casper-finality-proofs/src/prove_casper/: count_unique_pubkeys.rs  cuv_recursive.rs  mod.rs  sequential_verification.rs  vad_recurssive.rs
casper-finality-proofs/src/prove_finality/: circuit.rs  circuit_final.rs  epoch_processing.rs  mod.rs  prove_finality.rs  prove_finality_main.rs
casper-finality-proofs/src/test_engine/: TestEngine.md  mod.rs
casper-finality-proofs/src/utils/: bits.rs  byte_variable.rs  debugger.rs  eth_objects.rs  json.rs  mod.rs  plonky2x_extensions.rs  poseidon.rs  poseidon_helpers.rs  poseidon_merkle_tree.rs  poseidon_merkle_tree_helpers.rs  universal.rs  utils.rs  variable.rs
casper-finality-proofs/src/verification/: aggregate.rs  big_arithmetic.rs  final_exponentiate.rs  fp.rs  fp12.rs  fp2.rs  fp2_plonky2.rs  fp6.rs  fp_variable.rs  g1_ec_point.rs  g2_ec_point.rs  miller_loop.rs  mod.rs  native.rs  proof.rs  proofs.rs  pubkey_to_g1.rs  pubkey_to_g1_verification.rs  verify.rs
casper-finality-proofs/src/verify_attestation_data/: mod.rs  verify_attestation_data.rs  verify_attestation_data_poseidon.rs  verify_split_bitmask.rs  verify_split_bitmask_deprecated.rs  verify_subcommittee_votes.rs
casper-finality-proofs/src/weigh_justification_and_finalization/: beacon_state_field_verification.rs  checkpoint.rs  circuit.rs  epoch_processing.rs  justification_bits.rs  mod.rs
contracts/polkadot/light-client/: .gitignore  Cargo.toml  README.md  build.rs
(+3096 files in other folders)
