[package]
name = "casper-finality-proofs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "weigh_justification_and_finalization"
path = "bin/weigh_justification_and_finalization.rs"

[dependencies]
plonky2 = { git = "https://github.com/mir-protocol/plonky2.git", default-features = false}
plonky2x = { git = "https://github.com/succinctlabs/succinctx.git", branch = "main" }
serde = { version = "1.0.187", features = ["derive"] }
serde_json = "1.0.103"
ethers = { version = "2.0" }
itertools = { version = "0.10.0", default-features = false }
hex = "0.4.3"
array-macro = "2.1.5"
