[package]
name = "casper-finality-proofs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "weigh_justification_and_finalization"
path = "bin/weigh_justification_and_finalization.rs"

[[bin]]
name = "test_engine"
path = "src/test_engine/bin/main.rs"

[[bin]]
name = "test"
path = "bin/test.rs"

[[bin]]
name = "commitment_mapper_inner_level"
path = "bin/commitment_mapper_inner_level.rs"

[[bin]]
name = "commitment_mapper_first_level"
path = "bin/commitment_mapper_first_level.rs"

[[bin]]
name = "get_total_active_balance_first_level"
path = "bin/get_total_active_balance_first_level.rs"

[[bin]]
name = "get_total_active_balance_inner_level"
path = "bin/get_total_active_balance_inner_level.rs"


[dependencies]
plonky2 = { git = "https://github.com/mir-protocol/plonky2.git", default-features = false }
plonky2x = { git = "https://github.com/succinctlabs/succinctx.git", branch = "main" }
curta = { git = "https://github.com/succinctlabs/curta", branch = "main" }
serde = { version = "1.0.187", features = ["derive"] }
serde_json = "1.0.103"
serde_derive = "1.0.188"
ethers = { version = "2.0" }
primitive-types = "0.12.2"
colored = "2.0.4"
anyhow = "1.0.75"
crossbeam = "0.8.2"
strum = { version = "0.25", features = ["derive"] }
serde_yaml = "0.9.25"
once_cell = "1.18.0"
walkdir = "2.4.0"
itertools = { version = "0.10.0", default-features = false }
clap = { version = "4.4.6", features = ["derive"] }
