[package]
name = "casper-finality-proofs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "weigh_justification_and_finalization"
path = "bin/weigh_justification_and_finalization.rs"

[[bin]]
name = "prove_finality"
path = "bin/prove_finality.rs"

[[bin]]
name = "compute_shuffled_index"
path = "bin/compute_shuffled_index.rs"

[[bin]]
name = "test_engine"
path = "src/test_engine/bin/main.rs"

[dependencies]
plonky2 = { git = "https://github.com/mir-protocol/plonky2.git" }
plonky2x = { git = "https://github.com/succinctlabs/succinctx.git", branch = "main" }
starkyx = { git = "https://github.com/succinctlabs/starkyx.git", branch = "main" }
starky = { git = "https://github.com/mir-protocol/plonky2.git" }
# starky = { git = "https://github.com/NikolayKostadinov21/el-plonky2", branch = "derive_bn254_from_ff" }
serde = { version = "1.0.187", features = ["derive"] }
serde_json = "1.0.115"
serde_derive = "1.0.188"
ethers = { version = "2.0" }
primitive-types = "0.12.2"
colored = "2.0.4"
anyhow = "1.0.75"
crossbeam = "0.8.2"
strum = { version = "0.25", features = ["derive"] }
serde_yaml = "0.9.25"
once_cell = "1.18.0"
walkdir = "2.4.0"
hex = "0.4.3"
itertools = { version = "0.10.0", default-features = false }
clap = { version = "4.4.6", features = ["derive"] }
lighthouse_types = { git = "https://github.com/sigp/lighthouse", tag = "v4.5.0", package = "types" }
lighthouse_ef_tests = { git = "https://github.com/sigp/lighthouse", tag = "v4.5.0", package = "ef_tests" }
lighthouse_state_processing = { git = "https://github.com/sigp/lighthouse", tag = "v4.5.0", package = "state_processing" }
lighthouse_state_merkle_proof = { git = "https://github.com/sigp/lighthouse", tag = "v4.5.0", package = "merkle_proof" }
lighthouse_cached_tree_hash = { git = "https://github.com/sigp/lighthouse", tag = "v4.5.0", package = "cached_tree_hash" }
snap = "1.1.0"
num-bigint = "0.4.4"
