[package]
name = "casper-finality-proofs-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { version = "0.4.7" }
casper-finality-proofs = { path = ".." }
ethers = "2.0"
primitive-types = "0.12.2"
serde_json = "1.0.103"
serde = { version = "1.0.187", features = ["derive"] }
bincode = "1.3.3"
arbitrary = "1.3.2"
once_cell = "1.18.0"
serde_derive = "1.0.188"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "compute_shuffled_index_minimal"
path = "fuzz_targets/compute_shuffled_index_minimal.rs"
test = false
doc = false

[[bin]]
name = "compute_shuffled_index_mainnet"
path = "fuzz_targets/compute_shuffled_index_mainnet.rs"
test = false
doc = false

[[bin]]
name = "weigh_justification_and_finalization"
path = "fuzz_targets/weigh_justification_and_finalization.rs"
test = false
doc = false
