[package]
name = "circuits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plonky2 = { git = "https://github.com/metacraft-labs/plonky2" }
plonky2_u32 = { git = "https://github.com/metacraft-labs/plonky2-u32" }
sha2 = "0.9"
serde = "1.0.164"
serde_json = "1.0.96"
anyhow = "1.0.71"
hex = "0.4.3"
itertools = "0.10.5"
rand = "0.8.4"
jemallocator = "0.5.0"
num = { version = "0.4.0", default-features = false }
log = "0.4.14"
redis-work-queue = "0.1.3"
futures-lite = "1"
redis = "0.22"
