[package]
name = "circuits_executables"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
circuits = { path = "../circuits" }
num = { version = "0.4.0", features = ["serde"] }
plonky2 = { git = "https://github.com/metacraft-labs/plonky2" }
redis = { version = "0.22", features = ["json"] }
serde = "1.0.164"
serde_json = "1.0.96"
anyhow = "1.0.71"
hex = "0.4.3"
redis-work-queue = "0.1.3"
futures-lite = "1"
jemallocator = "0.5.0"
clap = "3.0"
serde_bytes = "0.11.12"
bincode = "1.3.3"
once_cell = "1.19.0"
num_enum = "0.7.2"
num-derive = "0.4.1"
num-traits = "0.2.17"
colored = "2.1.0"

[[bin]]
name = "balance_verification"
path = "bin/balance_verification.rs"

[[bin]]
name = "commitment_mapper"
path = "bin/commitment_mapper.rs"

[[bin]]
name = "balance_verification_circuit_data_generation"
path = "bin/balance_verification_circuit_data_generation.rs"

[[bin]]
name = "final_layer"
path = "bin/final_layer.rs"

[[bin]]
name = "commitment_mapper_circuit_data_generation"
path = "bin/commitment_mapper_circuit_data_generation.rs"

[[bin]]
name = "balance_verification_accumulator"
path = "bin/balance_verification_accumulator.rs"

[[bin]]
name = "commitment_mapper_accumulator"
path = "bin/commitment_mapper_accumulator.rs"

[[bin]]
name = "commitment_mapper_accumulator_circuit_data_generation"
path = "bin/commitment_mapper_accumulator_circuit_data_generation.rs"

[[bin]]
name = "basic_recursion"
path = "bin/basic_recursion.rs"
