[package]
name = "circuits_executables"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version = "0.23", features = ["aio", "async-std-comp", "connection-manager", "json"] }
circuits = { path = "../circuits" }
num = { version = "0.4.0", features = ["serde"] }
plonky2 = { git = "https://github.com/metacraft-labs/plonky2" }
serde = "1.0.164"
serde_json = "1.0.96"
anyhow = "1.0.71"
hex = "0.4.3"
redis-work-queue = "0.1.3"
futures-lite = "1"
jemallocator = "0.5.0"
clap = "3.0"
jsonm = "0.2.0"
serde-binary = "0.5.0"
ssz_rs = "0.9.0"
base64 = "0.21.5"
async-trait = "0.1.74"
tokio = { version = "1.35.1", features = ["full"] }
aws-config = "1.1.1"
aws-sdk-s3 = "1.17.0"
azure_storage_blobs = "0.18.0"
azure_core = "0.18.0"
azure_storage = "0.18.0"
futures = "0.3.30"
dotenv = "0.15.0"
serde_bytes = "0.11.12"
bincode = "1.3.3"
once_cell = "1.19.0"
num_enum = "0.7.2"
num-derive = "0.4.1"
num-traits = "0.2.17"
colored = "2.1.0"
glob = "0.3.1"
sha256 = "1.5.0"
lazy_static = "1.4.0"
ff = { package = "ff", version = "0.13", features = ["derive"] }

[[bin]]
name = "balance_verification"
path = "bin/balance_verification.rs"

[[bin]]
name = "commitment_mapper"
path = "bin/commitment_mapper.rs"

[[bin]]
name = "balance_verification_circuit_data_generation"
path = "bin/balance_verification_circuit_data_generation.rs"

[[bin]]
name = "final_layer"
path = "bin/final_layer.rs"

[[bin]]
name = "wrapper"
path = "bin/wrapper.rs"

[[bin]]
name = "commitment_mapper_circuit_data_generation"
path = "bin/commitment_mapper_circuit_data_generation.rs"
