[package]
name = "is_valid_merkle_branch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plonky2 = { git = "https://github.com/polymerdao/plonky2", rev = "4cb0b48df1d227d5461a4c28ed025aaea64e2e62" }
starky = { git = "https://github.com/polymerdao/plonky2", rev = "4cb0b48df1d227d5461a4c28ed025aaea64e2e62" }
# plonky2 = { git = "https://github.com/succinctlabs/plonky2.git", branch = "plonky2-btc" }
# plonky2_u32 = { git = "https://github.com/succinctlabs/plonky2.git", branch = "plonky2-btc" }
# plonky2_ecdsa = { git = "https://github.com/succinctlabs/plonky2.git", branch = "plonky2-btc" }
# plonky2_field = { git = "https://github.com/succinctlabs/plonky2.git", branch = "plonky2-btc" }
# btc-warp = { git = "https://github.com/succinctlabs/btc-warp", branch = "main" }
anyhow = "1.0.71"
plonky2_sha256 = { git = "https://github.com/polymerdao/plonky2-sha256", branch = "main" }
sha2 = "0.9"
serde = "1.0.164"
serde_json = "1.0.96"
