[package]
name = "poseidon_validator_tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plonky2 = { git = "https://github.com/metacraft-labs/plonky2" }
circuits = { path = "../circuits" }
num-bigint = "0.4.4"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
hex = "0.4.3"
primitive-types = "0.12.2"
lighthouse_state_merkle_proof = { git = "https://github.com/sigp/lighthouse", tag = "v4.5.0", package = "merkle_proof" }
lighthouse_cached_tree_hash = { git = "https://github.com/sigp/lighthouse", tag = "v4.5.0", package = "cached_tree_hash" }
ethereum_hashing = "0.6.0"
lazy_static = "1.4.0"