[package]
name = "poseidon_validator_tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plonky2 = { git = "https://github.com/metacraft-labs/plonky2" }
circuits = { path = "../circuits" }
num-bigint = "0.4.4"
lazy_static = "1.4.0"