[package]
name = "poseidon_validator_tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plonky2 = { git = "https://github.com/metacraft-labs/plonky2" }
circuits = { path = "../circuits" }
num-bigint = "0.4.4"
lazy_static = "1.4.0"
serde = "1.0.196"
serde_json = "1.0.113"
anyhow = "1.0.79"
hex = "0.4.3"
