[package]
name = "circuit_executables"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
circuit = { path = "../circuit" }
circuits = { path = "../circuits" }
redis = { version = "0.23", features = ["aio", "async-std-comp", "connection-manager", "json"] }
num = { version = "0.4.0", features = ["serde"] }
plonky2 = { git = "https://github.com/metacraft-labs/plonky2" }
starky = { git = "https://github.com/metacraft-labs/plonky2" }
plonky2-circuit-serializer = { git = "https://github.com/metacraft-labs/plonky2-circuit-serializer" }
starky_bls12_381 = { git = "https://github.com/metacraft-labs/starky_bls12_381" }
serde = "1.0.164"
serde_json = "1.0.96"
anyhow = "1.0.71"
hex = "0.4.3"
redis-work-queue = "0.1.3"
futures-lite = "1"
jemallocator = "0.5.0"
clap = "3.0"
base64 = "0.21.5"
async-trait = "0.1.74"
tokio = { version = "1.35.1", features = ["full"] }
aws-config = "1.1.1"
aws-sdk-s3 = "1.17.0"
azure_storage_blobs = "0.18.0"
azure_core = "0.18.0"
azure_storage = "0.18.0"
futures = "0.3.30"
dotenv = "0.15.0"
once_cell = "1.19.0"
num-derive = "0.4.1"
num-traits = "0.2.17"
colored = "2.1.0"
glob = "0.3.1"
lazy_static = "1.4.0"
itertools = "0.12.1"
ff = { package = "ff", version = "0.13", features = ["derive"] }
ark-bls12-381 = "0.4.0"
ark-std = "0.4.0"
ark-ec = "0.4.2"
ark-ff = "0.4.0"
ark-serialize = "0.4.0"
num-bigint = "0.4.4"
snowbridge-amcl = "1.0.2"

[[bin]]
name = "balance_verification"
path = "bin/balance_verification.rs"

[[bin]]
name = "commitment_mapper"
path = "bin/commitment_mapper.rs"

[[bin]]
name = "balance_verification_circuit_data_generation"
path = "bin/balance_verification_circuit_data_generation.rs"

[[bin]]
name = "final_layer"
path = "bin/final_layer.rs"

[[bin]]
name = "wrapper"
path = "bin/wrapper.rs"

[[bin]]
name = "commitment_mapper_circuit_data_generation"
path = "bin/commitment_mapper_circuit_data_generation.rs"

[[bin]]
name = "final_exponentiate"
path = "bin/final_exponentiate.rs"

[[bin]]
name = "final_exponentiate_circuit_data_generation"
path = "bin/final_exponentiate_circuit_data_generation.rs"

[[bin]]
name = "miller_loop_circuit_data_generation"
path = "bin/miller_loop_circuit_data_generation.rs"

[[bin]]
name = "miller_loop"
path = "bin/miller_loop.rs"

[[bin]]
name = "fp12_mul_circuit_data_generation"
path = "bin/fp12_mul_circuit_data_generation.rs"

[[bin]]
name = "fp12_mul"
path = "bin/fp12_mul.rs"

[[bin]]
name = "calc_pairing_precomp"
path = "bin/calc_pairing_precomp.rs"

[[bin]]
name = "calc_pairing_precomp_circuit_data_generation"
path = "bin/calc_pairing_precomp_circuit_data_generation.rs"

[[bin]]
name = "bls12_381_circuit_data_generation"
path = "bin/bls12_381_circuit_data_generation.rs"

[[bin]]
name = "bls12_381_components_proofs"
path = "bin/bls12_381_components_proofs.rs"

[[bin]]
name = "bls12_381"
path = "bin/bls12_381.rs"

[[bin]]
name = "deposit_accumulator_verification"
path = "bin/deposit_accumulator_verification.rs"
