[package]
name = "rust-light-client"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.1"
solana-program = "~1.8.14"

# Zkey dependencies
ark-groth16 = { path = "../../../../../groth16" }
# ark-bn254 = { path = "../../../../algebra/", default-features = false, features = ["curve"], }
ark-bn254 = { path = "../../../../../curves/bn254" }
ark-ec = { path = "../../../../../algebra/ec" }
num-bigint = "0.4"

[lib]
name = "light_client"
crate-type = ["cdylib", "lib"]
